--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,19 @@
 [package]
-name = "classification-component-onnx"
+name = "wasi-classification"
 version = "0.1.0"
-edition = "2021"
-authors = ["The Wasmtime Project Developers"]
+edition = "2024"
+authors = ["The Wasmtime Project Developers + Quark"]
 readme = "README.md"
 publish = false
 
 [dependencies]
-wit-bindgen = { version = "0.32.0",  default-features = false, features = ["macros"] }
+actix-web = "4"
 image = { version = "0.25.2", default-features = false, features = ["jpeg"] }
 ndarray = "0.16.1"
+wit-bindgen = { version = "0.32.0", default-features = ["macros"] }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [profile.release]
 codegen-units = 1
